k3s-manifests/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
