k3s-manifests/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
